# simple-url-shortener

./: .env.sample  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test_requirements.txt
.github/workflows/: python-tests.yml
api/: __init__.py  config.py
api/models/: url.py  user.py
api/utils/: decorators.py
k8s/: app-deployment.yaml  config-vars.yaml  mongo-deployment.yaml  redis-deployment.yaml  secrets.yaml
test/: conftest.py
test/domain/model/: test_url.py  test_user.py
test/fixtures/repositories/: url.py  user.py
test/infrastructure/repositories/: test_url_repository.py  test_user_repository.py
test/integration/api/routes/: test_auth_routes.py  test_url_routes.py  test_user_routes.py
urlshortener/api/: __init__.py  config.py
urlshortener/api/models/: user.py
urlshortener/api/routes/: auth.py  url.py  user.py
urlshortener/api/services/: url.py  user.py
urlshortener/api/utils/: auth.py  decorators.py  url.py
urlshortener/domain/model/: url.py  user.py  validators.py
urlshortener/domain/ports/repositories/: exceptions.py  url.py  user.py
urlshortener/domain/ports/services/: url.py  user.py
urlshortener/infrastructure/cache/: __init__.py
urlshortener/infrastructure/cache/repositories/: url.py  user.py
urlshortener/infrastructure/db/repositories/: url.py  user.py
urlshortener/infrastructure/models/: url.py  user.py
urlshortener/infrastructure/repositories/: url.py  user.py
